[package]
name = "windows-cap-audio"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.80", features = ["backtrace"] }
clap = { version = "4.5.1", features = ["derive"] }
duration-str = "0.7.1"
wav = "1.0.0"
windows = { version = "0.53.0", features = [
    "Win32_Media_Audio",
    "Win32_System_Com",
] }
